rerun upload_data notebook

--- a/wk_1_basics_n_setup/2_docker_sql/upload_data.ipynb
+++ b/wk_1_basics_n_setup/2_docker_sql/upload_data.ipynb
@@ -420,20 +420,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: sqlalchemy in /opt/homebrew/lib/python3.10/site-packages (1.4.46)\n"
+      "Requirement already satisfied: sqlalchemy in /opt/homebrew/lib/python3.10/site-packages (1.4.46)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%%sh\n",
-    "pip install sqlalchemy"
+    "%pip install sqlalchemy"
    ]
   },
   {
@@ -462,7 +462,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.base.Connection at 0x11c6b8be0>"
+       "<sqlalchemy.engine.base.Connection at 0x11ce7ec20>"
       ]
      },
      "execution_count": 9,
@@ -619,7 +619,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/8x/t25g3slx0lq4lmbm982t67w00000gr/T/ipykernel_27213/2283847404.py:4: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/8x/t25g3slx0lq4lmbm982t67w00000gr/T/ipykernel_29078/2283847404.py:4: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = next(df_iter)\n"
      ]
     },
@@ -627,7 +627,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "inserted another chunk took 16.952 secs\n"
+      "inserted another chunk took 16.994 secs\n"
      ]
     },
     {
