--- a/wk_1_basics_n_setup/2_docker_sql/upload_data.ipynb
+++ b/wk_1_basics_n_setup/2_docker_sql/upload_data.ipynb
@@ -476,6 +476,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>schemaname</th>\n",
+       "      <th>tablename</th>\n",
+       "      <th>tableowner</th>\n",
+       "      <th>tablespace</th>\n",
+       "      <th>hasindexes</th>\n",
+       "      <th>hasrules</th>\n",
+       "      <th>hastriggers</th>\n",
+       "      <th>rowsecurity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>public</td>\n",
+       "      <td>yellow_taxi_data</td>\n",
+       "      <td>root</td>\n",
+       "      <td>None</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  schemaname         tablename tableowner tablespace  hasindexes  hasrules  \\\n",
+       "0     public  yellow_taxi_data       root       None        True     False   \n",
+       "\n",
+       "   hastriggers  rowsecurity  \n",
+       "0        False        False  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"\"\"\n",
+    "select * from pg_catalog.pg_tables\n",
+    "where schemaname not in ('pg_catalog', 'information_schema')\n",
+    "\"\"\"\n",
+    "\n",
+    "pd.read_sql(query, con=engine)\n",
+    "# if run this after the very last cell, it will show table `yello_taxi_data`"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
